fix the inner wrap as well

--- a/src/styles/slick-lightbox.less
+++ b/src/styles/slick-lightbox.less
@@ -19,7 +19,7 @@
 		filter: ~"alpha(opacity=0)";
 	}
 	.slick-lightbox-inner {
-		position: absolute;
+		position: fixed;
 		top: 0;
 		left: 0;
 		width: 100%;
